<resources>
    <string name="app_name">Simple Memo App</string>
    <string name="info_new_memo">새 메모를 생성해보세요!</string>
    <string name="info_memo_error">메모를 불러오는 데 실패했습니다.</string>
    <string name="create_memo">메모 생성</string>
    <string name="title">제목</string>
    <string name="contents">내용</string>
    <string name="save">저장</string>
    <string name="memo_create_success">메모를 생성했습니다.</string>
    <string name="memo_create_fail">메모를 생성하지 못했습니다.</string>
    <string name="title_or_contents_empty">제목과 내용을 입력해주세요.</string>
    <string name="memo_few_years_ago">%1$d년 %2$d월 %3$d일</string>
    <string name="memo_this_year">%1$d월 %2$d일</string>
    <string name="memo_today">%1$d시 %2$d분</string>
    <string name="memo_edit_success">메모를 수정했습니다.</string>
    <string name="memo_edit_fail">메모를 수정하지 못했습니다.</string>
    <string name="edit_memo">수정하기</string>
    <string name="delete_memo">삭제하기</string>
    <string name="memo_delete_success">메모를 삭제했습니다.</string>
    <string name="memo_delete_fail">메모를 삭제하지 못했습니다.</string>
    <string name="memo_delete_alert_title">"삭제하기"</string>
    <string name="memo_delete_alert_message">"정말 삭제하시겠습니까?"</string>
    <string name="dismiss">"취소"</string>
    <string name="confirm">"확인"</string>
    <string name="back">"뒤로가기"</string>
    <string name="menu">"메뉴"</string>
</resources>